<resources>
    <string name="app_name">Sliding Puzzle</string>
    <string name="login_text">Login</string>
    <string name="button_login">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="register_an_account">Register an Account</string>
    <string name="register">Register</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="default_moves">0 moves</string>
    <string name="default_time">0 seconds</string>
    <string name="create_an_account">Create an Account</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="leaderboards">Leaderboards</string>
    <plurals name="seconds">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
    <plurals name="moves">
        <item quantity="one">%1$d move</item>
        <item quantity="other">%1$d moves</item>
    </plurals>
    <string name="minutes_seconds">%1$dm %2$ds</string>
    <string name="default_image">default_image</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="current_puzzle">Current Puzzle</string>
    <string name="pick_puzzle">Pick Puzzle</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_main_menu">Main Menu</string>
    <string name="nav_item_campaign">Campaign</string>
    <string name="nav_item_free_play">Free Play</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_leaderboards">Leaderboards</string>
    <string name="nav_item_signout">Sign Out</string>
    <string name="launcher_logo">launcher_logo</string>
    <string name="user_logo">user_logo</string>
    <string name="change_free_play_puzzle">Change Free Play Puzzle</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_main_menu</item>
        <item>@string/nav_item_campaign</item>
        <item>@string/nav_item_free_play</item>
        <item>@string/nav_item_leaderboards</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_signout</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
