<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ist_311.sliding_puzzle_miller_huynh_white.activities.SettingsActivity"
    android:background="@drawable/puzzle_pieces">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rows"
        android:id="@+id/textViewRows"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/columns"
        android:layout_alignTop="@+id/textViewRows"
        android:layout_alignParentEnd="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerRows"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewRows"
        android:background="@drawable/gradient"
        android:descendantFocusability="beforeDescendants"/>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerCols"
        android:layout_alignTop="@+id/numberPickerRows"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gradient"
        android:descendantFocusability="beforeDescendants"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/numberPickerCols"
        android:layout_below="@+id/buttonPickPuzzle"
        android:src="@drawable/puzzle_pieces"
        android:contentDescription="@string/default_image"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_free_play_puzzle"
        android:id="@+id/buttonPickPuzzle"
        android:background="@drawable/button"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:onClick="chooseImage"
        android:layout_alignParentStart="true" />
</RelativeLayout>
